fix: get post by id endpoint
